Admin route to promote a filtered set of files
